Impl [General] Add secondary button style

--- a/src/nuclio/common/screens/create-function/create-function.tpl.html
+++ b/src/nuclio/common/screens/create-function/create-function.tpl.html
@@ -18,6 +18,7 @@
                              data-ng-click="$ctrl.selectFunctionType('from_template')"
                              data-ng-class="{'selected': $ctrl.isTypeSelected('from_template')}">
                             <div class="function-type-icon">
+                                <ng-include src="'/assets/images/background-circle.svg'"></ng-include>
                                 <span class="ncl-icon-template icon"></span>
                             </div>
                             <div class="function-type-info">
@@ -36,6 +37,7 @@
                              data-ng-click="$ctrl.selectFunctionType('from_scratch')"
                              data-ng-class="{'selected': $ctrl.isTypeSelected('from_scratch')}">
                             <div class="function-type-icon">
+                                <ng-include src="'/assets/images/background-circle.svg'"></ng-include>
                                 <span class="ncl-icon-add icon"></span>
                             </div>
                             <div class="function-type-info">
@@ -54,6 +56,7 @@
                              data-ng-click="$ctrl.selectFunctionType('import')"
                              data-ng-class="{'selected': $ctrl.isTypeSelected('import')}">
                             <div class="function-type-icon">
+                                <ng-include src="'/assets/images/background-circle.svg'"></ng-include>
                                 <span class="ncl-icon-import icon"></span>
                             </div>
                             <div class="function-type-info function-import">
