--- a/src/nuclio/functions/functions.tpl.html
+++ b/src/nuclio/functions/functions.tpl.html
@@ -29,7 +29,7 @@
         </div>
         <div class="actions-bar-right">
             <div class="actions-bar-left actions-buttons-block">
-                <button class="ncl-new-entity-button"
+                <button class="ncl-new-entity-button igz-button-primary"
                         data-ng-click="$ctrl.openNewFunctionScreen()">
                     {{ 'functions:NEW_FUNCTION' | i18next }}
                 </button>
