--- a/src/nuclio/functions/version/version-configuration/tabs/version-configuration-runtime-attributes/version-configuration-runtime-attributes.tpl.html
+++ b/src/nuclio/functions/version/version-configuration/tabs/version-configuration-runtime-attributes/version-configuration-runtime-attributes.tpl.html
@@ -62,7 +62,7 @@
                     </ncl-key-value-input>
                 </div>
             </div>
-            <div class="ncl-create-button create-label-button"
+            <div class="igz-create-button create-label-button"
                  data-ng-click="$ctrl.addNewAttribute($event)">
                 <span class="igz-icon-add-round"></span>
                 {{ 'functions:CREATE_NEW_RUNTIME_ATTRIBUTE' | i18next }}
