--- a/src/nuclio/functions/version/version-configuration/tabs/version-configuration-volumes/version-configuration-volumes.tpl.html
+++ b/src/nuclio/functions/version/version-configuration/tabs/version-configuration-volumes/version-configuration-volumes.tpl.html
@@ -43,7 +43,7 @@
                 </div>
             </div>
         </div>
-        <div class="create-volume-button"
+        <div class="create-volume-button igz-create-button"
              data-ng-click="$ctrl.createVolume($event)">
             <span class="igz-icon-add-round"></span>
             {{ 'functions:CREATE_NEW_VOLUME' | i18next }}
