--- a/src/nuclio/functions/version/version-triggers/version-triggers.tpl.html
+++ b/src/nuclio/functions/version/version-triggers/version-triggers.tpl.html
@@ -25,7 +25,7 @@
                                        data-default-fields="$ctrl.defaultFields"
                                        data-on-submit-callback="$ctrl.editTriggerCallback(item)"></ncl-edit-item>
                     </ncl-collapsing-row>
-                    <div class="common-table-row create-trigger-button"
+                    <div class="common-table-row create-trigger-button igz-create-button"
                          data-ng-click="$ctrl.createTrigger($event)">
                         <span class="igz-icon-add-round"></span>
                         {{ 'functions:CREATE_NEW_TRIGGER' | i18next }}
