--- a/src/nuclio/functions/version/version.tpl.html
+++ b/src/nuclio/functions/version/version.tpl.html
@@ -14,7 +14,7 @@
                 </igz-default-dropdown>
             </div>
             <div class="actions-bar-left actions-buttons-block">
-                <button class="ncl-new-entity-button"
+                <button class="ncl-new-entity-button igz-button-primary"
                         data-ng-class="{'disabled': $ctrl.isDeployButtonDisabled()}"
                         data-ng-click="$ctrl.isInValidDeployState() || $ctrl.deployButtonClick($event)"
                         data-uib-tooltip="{{ 'functions:TOOLTIP.DEPLOY_BTN' | i18next }}"
