--- a/src/nuclio/common/screens/create-function/function-from-template/function-from-template-dialog/function-from-template-dialog.tpl.html
+++ b/src/nuclio/common/screens/create-function/function-from-template/function-from-template-dialog/function-from-template-dialog.tpl.html
@@ -63,12 +63,12 @@
 </div>
 
 <div class="buttons">
-    <button class="ncl-secondary-button"
+    <button class="ncl-secondary-button igz-button-secondary"
             data-ng-click="$ctrl.onClose()"
             data-ng-keydown="$ctrl.onClose($event)">
         {{ 'common:CANCEL' | i18next }}
     </button>
-    <button class="ncl-primary-button"
+    <button class="ncl-primary-button igz-button-primary"
             data-ng-class="{disabled: !$ctrl.isFormFilled()}"
             data-ng-disabled="!$ctrl.isFormFilled()"
             data-ng-click="$ctrl.onApply()"
