--- a/src/nuclio/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build-dialog/version-configuration-build-dialog.tpl.html
+++ b/src/nuclio/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build-dialog/version-configuration-build-dialog.tpl.html
@@ -22,13 +22,13 @@
 </div>
 
 <div class="buttons">
-    <button class="ncl-secondary-button"
+    <button class="ncl-secondary-button igz-button-secondary"
             tabindex="0"
             data-ng-click="$ctrl.onClose()"
             data-ng-keydown="$ctrl.onClose($event)">
         {{ 'common:CANCEL' | i18next }}
     </button>
-    <button class="ncl-primary-button"
+    <button class="ncl-primary-button igz-button-primary"
             tabindex="0"
             ngf-select="$ctrl.uploadFile($file)">
         {{ 'common:BROWSE' | i18next }}
