--- a/src/nuclio/functions/version/version-configuration/tabs/version-configuration-environment-variables/version-configuration-environment-variables.tpl.html
+++ b/src/nuclio/functions/version/version-configuration/tabs/version-configuration-environment-variables/version-configuration-environment-variables.tpl.html
@@ -22,7 +22,7 @@
                 </ncl-key-value-input>
             </div>
         </div>
-        <div class="ncl-create-button create-variable-button"
+        <div class="igz-create-button create-variable-button"
              data-ng-click="$ctrl.addNewVariable($event)">
             <span class="igz-icon-add-round"></span>
             {{ 'functions:CREATE_NEW_ENVIRONMENT_VARIABLE' | i18next }}
