[Project] Action bar is partially hidden on closing header

--- a/src/nuclio/functions/functions.tpl.html
+++ b/src/nuclio/functions/functions.tpl.html
@@ -1,4 +1,4 @@
-<section class="igz-general-content" data-igz-extend-background>
+<div class="ncl-functions-wrapper">
 
     <!--splash screen-->
     <igz-splash-screen data-is-splash-showed="$ctrl.isSplashShowed"></igz-splash-screen>
@@ -151,4 +151,4 @@
             </div>
         </div>
     </igz-info-page-content>
-</section>
+</div>
