--- a/src/nuclio/common/screens/create-function/create-function.tpl.html
+++ b/src/nuclio/common/screens/create-function/create-function.tpl.html
@@ -79,11 +79,13 @@
             <ncl-function-from-scratch data-ng-if="$ctrl.isTypeSelected('from_scratch')"
                                        data-toggle-splash-screen="$ctrl.toggleSplashScreen(value)"
                                        data-project="$ctrl.project"
+                                       data-get-function="$ctrl.getFunction({metadata: metadata})"
                                        data-create-new-project="$ctrl.createNewProject"
                                        data-selected-project="$ctrl.selectedProject"
                                        data-projects="$ctrl.projects">
             </ncl-function-from-scratch>
             <ncl-function-from-template data-ng-if="$ctrl.isTypeSelected('from_template')"
+                                        data-get-function="$ctrl.getFunction({metadata: metadata})"
                                         data-get-function-templates="$ctrl.getTemplates()"
                                         data-templates="$ctrl.templates"
                                         data-toggle-splash-screen="$ctrl.toggleSplashScreen(value)"
