--- a/src/nuclio/common/screens/create-function/function-from-scratch/function-from-scratch.tpl.html
+++ b/src/nuclio/common/screens/create-function/function-from-scratch/function-from-scratch.tpl.html
@@ -33,16 +33,11 @@
                                                 data-input-name="name"
                                                 data-input-value="$ctrl.functionData.metadata.name"
                                                 data-validation-is-required="true"
-                                                data-validation-pattern="$ctrl.validationPatterns.functionName"
-                                                data-validation-max-length="{{$ctrl.validationPatterns.getMaxLength('function.name')}}"
-                                                data-hide-counter="false"
+                                                data-validation-rules="$ctrl.validationRules"
                                                 data-input-model-options="$ctrl.inputModelOptions"
                                                 data-form-object="$ctrl.functionFromScratchForm"
                                                 data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
-                                                data-placeholder-text="{{ 'functions:PLACEHOLDER.ENTER_FUNCTION_NAME' | i18next }}"
-                                                data-uib-tooltip="{{ 'functions:TOOLTIP.PROJECT_FUNCTION_NAME' | i18next }}"
-                                                data-tooltip-popup-delay="500"
-                                                data-tooltip-append-to-body="true">
+                                                data-placeholder-text="{{ 'functions:PLACEHOLDER.ENTER_FUNCTION_NAME' | i18next }}">
                     </igz-validating-input-field>
                 </div>
             </div>
