[Nuclio] Volumes: All volumes with the same name are removed

--- a/src/nuclio/functions/version/version-configuration/tabs/version-configuration-volumes/version-configuration-volumes.tpl.html
+++ b/src/nuclio/functions/version/version-configuration/tabs/version-configuration-volumes/version-configuration-volumes.tpl.html
@@ -29,9 +29,10 @@
                          data-ng-scrollbars-config="$ctrl.scrollConfig">
                         <ncl-collapsing-row data-ng-repeat="volume in $ctrl.volumes"
                                             data-item="volume"
+                                            data-item-index="$index"
                                             data-type="volume"
                                             data-list-class="scrollable-volumes"
-                                            data-action-handler-callback="$ctrl.handleAction(actionType, selectedItem)">
+                                            data-action-handler-callback="$ctrl.handleAction(actionType, selectedItem, index)">
                             <ncl-edit-item class="common-table-cells-container edit-volume-row"
                                            data-item="volume"
                                            data-type="volume"
