--- a/src/nuclio/functions/functions.tpl.html
+++ b/src/nuclio/functions/functions.tpl.html
@@ -1,4 +1,4 @@
-<div class="ncl-functions-wrapper">
+<div class="ncl-functions-wrapper" data-igz-extend-background>
 
     <!--splash screen-->
     <igz-splash-screen data-is-splash-showed="$ctrl.isSplashShowed"></igz-splash-screen>
