[Nuclio] Triggers: Validate no more than one HTTP trigger

--- a/src/nuclio/functions/version/version-configuration/tabs/version-configuration-volumes/version-configuration-volumes.tpl.html
+++ b/src/nuclio/functions/version/version-configuration/tabs/version-configuration-volumes/version-configuration-volumes.tpl.html
@@ -35,6 +35,7 @@
                                             data-action-handler-callback="$ctrl.handleAction(actionType, selectedItem, index)">
                             <ncl-edit-item class="common-table-cells-container edit-volume-row"
                                            data-item="volume"
+                                           data-class-list="$ctrl.classList"
                                            data-type="volume"
                                            data-validation-rules="$ctrl.validationRules"
                                            data-on-submit-callback="$ctrl.editVolumeCallback(item)">
