--- a/src/nuclio/functions/version/version-triggers/version-triggers.tpl.html
+++ b/src/nuclio/functions/version/version-triggers/version-triggers.tpl.html
@@ -21,9 +21,12 @@
                                         data-action-handler-callback="$ctrl.handleAction(actionType, selectedItem)">
                         <ncl-edit-item class="common-table-cells-container edit-trigger-row"
                                        data-item="trigger"
+                                       data-class-list="$ctrl.classList"
                                        data-type="trigger"
                                        data-default-fields="$ctrl.defaultFields"
-                                       data-on-submit-callback="$ctrl.editTriggerCallback(item)"></ncl-edit-item>
+                                       data-on-select-class-callback="$ctrl.checkClassUniqueness()"
+                                       data-on-submit-callback="$ctrl.editTriggerCallback(item)">
+                        </ncl-edit-item>
                     </ncl-collapsing-row>
                     <div class="common-table-row create-trigger-button igz-create-button"
                          data-ng-click="$ctrl.createTrigger($event)">
