[Nuclio] Status column sorts only after second click

--- a/src/nuclio/functions/functions.tpl.html
+++ b/src/nuclio/functions/functions.tpl.html
@@ -80,9 +80,9 @@
                         <span class="sort-arrow"></span>
                     </div>
                     <div class="common-table-cell sortable function-status"
-                         data-ng-class="[$ctrl.getColumnSortingClasses('status.state', $ctrl.sortedColumnName, $ctrl.isReverseSorting),
+                         data-ng-class="[$ctrl.getColumnSortingClasses('ui.convertedStatus', $ctrl.sortedColumnName, $ctrl.isReverseSorting),
                                          $ctrl.getFunctionsTableColSize('status')]"
-                         data-ng-click="$ctrl.sortTableByColumn('status.state')">
+                         data-ng-click="$ctrl.sortTableByColumn('ui.convertedStatus')">
                         {{ 'common:STATUS' | i18next }}
                         <span class="sort-arrow"></span>
                     </div>
