--- a/src/nuclio/functions/version/version-code/function-event-pane/function-event-pane.tpl.html
+++ b/src/nuclio/functions/version/version-code/function-event-pane/function-event-pane.tpl.html
@@ -50,9 +50,10 @@
             <form name="$ctrl.testEventsForm" novalidate>
                 <div class="main-header">
                     <div class="left-side-elements">
-                <span class="igz-icon-hamburger-menu"
-                      data-ng-if="!$ctrl.fixedLeftBar"
-                      data-ng-click="$ctrl.toggleLeftBar()"></span>
+                        <span class="igz-icon-hamburger-menu"
+                              data-ng-if="!$ctrl.fixedLeftBar"
+                              data-ng-click="$ctrl.toggleLeftBar()">
+                        </span>
 
                         <igz-elastic-input-field data-model="$ctrl.selectedEvent.spec.displayName"
                                                  data-model-options="{allowInvalid:true}"
