[Nuclio] Add validation rules to env vars and ingress hosts

--- a/src/nuclio/functions/version/version-triggers/version-triggers.tpl.html
+++ b/src/nuclio/functions/version/version-triggers/version-triggers.tpl.html
@@ -22,6 +22,7 @@
                                    data-item="trigger"
                                    data-class-list="$ctrl.classList"
                                    data-type="trigger"
+                                   data-validation-rules="$ctrl.validationRules"
                                    data-default-fields="$ctrl.defaultFields"
                                    data-on-select-class-callback="$ctrl.checkClassUniqueness()"
                                    data-on-submit-callback="$ctrl.editTriggerCallback(item)">
