--- a/src/nuclio/functions/version/version-code/function-event-pane/function-event-pane.tpl.html
+++ b/src/nuclio/functions/version/version-code/function-event-pane/function-event-pane.tpl.html
@@ -60,9 +60,10 @@
                                                  data-on-change="$ctrl.inputValueCallback(item, 'spec.displayName')"
                                                  data-input-name="nameInput"
                                                  data-form-object="$ctrl.testEventsForm"
-                                                 data-required="true"
+                                                 data-required="false"
                                                  data-placeholder="{{ 'functions:PLACEHOLDER.EVENT_NAME' | i18next }}"
-                                                 data-max-length="128">
+                                                 data-max-length="128"
+                                                 data-min-length="0">
                         </igz-elastic-input-field>
                     </div>
 
@@ -78,7 +79,7 @@
                         <button class="igz-button-secondary small"
                                 data-ng-class="{'disabled': $ctrl.isDisabledTestButton()}"
                                 data-ng-click="$ctrl.isDisabledTestButton() ? angular.noop : $ctrl.testEvent()"
-                                data-tooltip-enable="$ctrl.version.ui.deployResult.status.state !== 'ready' || $ctrl.version.spec.disable"
+                                data-tooltip-enable="$ctrl.version.status.state !== 'ready' || $ctrl.version.spec.disable"
                                 data-uib-tooltip="{{ 'functions:TOOLTIP.DISABLED_FUNCTION' | i18next }}"
                                 data-tooltip-popup-delay="300"
                                 data-tooltip-placement="top"
