[Nuclio] Function list: make checkboxes always visible

--- a/src/nuclio/functions/function-collapsing-row/function-collapsing-row.tpl.html
+++ b/src/nuclio/functions/function-collapsing-row/function-collapsing-row.tpl.html
@@ -3,7 +3,7 @@
     <div class="function-title-block common-table-row">
         <div class="common-table-cell igz-col-3">
             <igz-action-checkbox
-                    data-ng-class="{'visible': $ctrl.functionsService.checkedItem === 'functions',
+                    data-ng-class="{'visible': !$ctrl.isDemoMode() || $ctrl.functionsService.checkedItem === 'functions',
                                     'invisible': $ctrl.functionsService.checkedItem !== 'functions' &&
                                                  $ctrl.functionsService.checkedItem !== ''}"
                     data-item="$ctrl.function"
